compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__const_with_fields.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\ntype Mine {\n  Mine(a: Int, b: Int)\n}\n\nconst labels = Mine(b: 2, a: 1)\nconst no_labels = Mine(3, 4)\n"
---
----- SOURCE CODE

type Mine {
  Mine(a: Int, b: Int)
}

const labels = Mine(b: 2, a: 1)
const no_labels = Mine(3, 4)


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

class Mine extends $CustomType {
  constructor(a, b) {
    super();
    this.a = a;
    this.b = b;
  }
  
  withFields(fields) {
    return new Mine(
      'a' in fields ? fields.a : this.a,
      'b' in fields ? fields.b : this.b
    );
  }
}

const labels = /* @__PURE__ */ new Mine(1, 2);

const no_labels = /* @__PURE__ */ new Mine(3, 4);
