compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__const_with_fields_typescript.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\npub type Mine {\n  Mine(a: Int, b: Int)\n}\n\npub const labels = Mine(b: 2, a: 1)\npub const no_labels = Mine(3, 4)\n"
---
----- SOURCE CODE

pub type Mine {
  Mine(a: Int, b: Int)
}

pub const labels = Mine(b: 2, a: 1)
pub const no_labels = Mine(3, 4)


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

export class Mine extends _.CustomType {
  /** @deprecated */
  constructor(a: number, b: number);
  /** @deprecated */
  a: number;
  /** @deprecated */
  b: number;
}
export function Mine$Mine(a: number, b: number): Mine$;
export function Mine$isMine(value: any): value is Mine$;
export function Mine$Mine$0(value: Mine$): number;
export function Mine$Mine$a(value: Mine$): number;
export function Mine$Mine$1(value: Mine$): number;
export function Mine$Mine$b(value: Mine$): number;

export type Mine$ = Mine;

export const labels: Mine$;

export const no_labels: Mine$;
