compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__destructure_custom_type_with_mixed_fields_second_unlabelled.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\ntype Cat {\n  Cat(name: String, Int)\n}\n\nfn go(cat) {\n  let Cat(x, y) = cat\n  let Cat(name: x, ..) = cat\n  let Cat(y, name: x) = cat\n  x\n}\n\n"
---
----- SOURCE CODE

type Cat {
  Cat(name: String, Int)
}

fn go(cat) {
  let Cat(x, y) = cat
  let Cat(name: x, ..) = cat
  let Cat(y, name: x) = cat
  x
}



----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

class Cat extends $CustomType {
  constructor(name, x1) {
    super();
    this.name = name;
    this[1] = x1;
  }
}

function go(cat) {
  let x = cat.name;
  let y = cat[1];
  let x$1 = cat.name;
  let x$2 = cat.name;
  let y$1 = cat[1];
  return x$2;
}
